task 10 user-profile model: vm-share 文件同步